--- a/chart/devops-service-business/values.yaml
+++ b/chart/devops-service-business/values.yaml
@@ -17,17 +17,17 @@ preJob:
     datasources:
       # 多数据源初始化
       platform:
-         url: jdbc:mysql://localhost:3306/?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true&serverTimezone=Asia/Shanghai
-         username: username
-         password: password
-         driver: com.mysql.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/?useUnicode=true&characterEncoding=utf-8&useSSL=false&useInformationSchema=true&remarks=true&serverTimezone=Asia/Shanghai
+        username: username
+        password: password
+        driver: com.mysql.jdbc.Driver
 
 ## 实例运行数量
 replicaCount: 1
 
 ## 设置默认的 image、imageTag 和 imagePullPolicy。
 image:
-  repository: registry.cn-shanghai.aliyuncs.com/c7n/devops-service-business
+  repository: registry.cn-shanghai.aliyuncs.com/c7n/devops-service
   tag: ~
   pullPolicy: IfNotPresent
 
@@ -119,6 +119,8 @@ env:
     AGENT_CERTMANAGERURL: https://openchart.choerodon.com.cn/choerodon/c7n/
     # agent初始化repo时并发数
     AGENT_REPOCONCURRENCYSYNCSIZE: 1
+    # 流水线的ci生成规则版本，如果有修改则加1
+    CI_DFAULT_RULE_NUMBER: 1
     # 日志级别
     LOG_LEVEL: info
 
@@ -154,7 +156,7 @@ readinessProbe:
 ## 资源请求和限制相关配置
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
-resources: 
+resources:
   limits:
     # cpu: 100m
     memory: 3Gi
@@ -180,13 +182,13 @@ service:
   # 指定 service 的 clusterIP
   clusterIP: ~
   # 端口设置
-  ports: 
+  ports:
     # 服务端口
-    http: 
+    http:
       port: 8060
       nodePort: 30138
     # 管理端口
-    actuator: 
+    actuator:
       port: 8061
       nodePort: 30139
   ## externalIPs 设置
