--- a/chart/devops-service-business/templates/pre-init-db.yaml
+++ b/chart/devops-service-business/templates/pre-init-db.yaml
@@ -45,6 +45,7 @@ spec:
           -Dinstaller.datasources.platform.driver-class-name={{ .Values.preJob.preInitDB.datasources.platform.driver }}
           -Dinstaller.jarPath=/choerodon/{{ .Chart.Name }}.jar
           -Dlogging.level.root=info
+          -Dinstaller.jarPath.init=true
           -Dinstaller.mapping=script/db/service-mapping.xml
           -jar /var/choerodon/choerodon-tool-liquibase.jar;
         volumeMounts:
