--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>devops-service-business-business</artifactId>
+    <artifactId>devops-service-business</artifactId>
     <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>https://github.com/open-hand/devops-service-business-business</url>
