--- a/chart/devops-service-business/values.yaml
+++ b/chart/devops-service-business/values.yaml
@@ -27,7 +27,7 @@ replicaCount: 1
 
 ## 设置默认的 image、imageTag 和 imagePullPolicy。
 image:
-  repository: registry.cn-shanghai.aliyuncs.com/c7n/devops-service
+  repository: registry.cn-shanghai.aliyuncs.com/c7n/devops-service-business
   tag: ~
   pullPolicy: IfNotPresent
 
