--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -26,7 +26,8 @@ spring:
       enabled: false
   mvc:
     static-path-pattern: /**
-  resources:
+  web:
+   resources:
     static-locations: classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:/dist
 management:
   server:
