[IMP] update pull policy

--- a/chart/devops-service-business/templates/pre-init-db.yaml
+++ b/chart/devops-service-business/templates/pre-init-db.yaml
@@ -30,6 +30,7 @@ spec:
       containers:
       - name: {{ .Release.Name }}-init-db
         image: {{ include "service.image" . }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         command:
         - /bin/sh
         - -c
