[IMP] update pom

--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
         <choerodon.serviceBuild>true</choerodon.serviceBuild>
         <choerodon.mainClass>io.choerodon.devops.DevopsServiceBusinessApplication</choerodon.mainClass>
         <spring.data.redis.version>2.1.0.RELEASE</spring.data.redis.version>
-        <devops.version>1.2.0-SNAPSHOT</devops.version>
-        <devops.plugin.version>1.2.0-SNAPSHOT</devops.plugin.version>
+        <devops.version>1.2.0-alpha.3-SNAPSHOT</devops.version>
+        <devops.plugin.version>1.2.0-alpha.1-SNAPSHOT</devops.plugin.version>
     </properties>
 
 
