--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -182,7 +182,7 @@ logging:
     org.apache.ibatis: ${LOG_LEVEL:info}
     io.choerodon: ${LOG_LEVEL:info}
     org.hzero: ${LOG_LEVEL:info}
-  #    io.choerodon.devops.app.service: debug
+    io.choerodon.devops.app.service: info
   config: classpath:logback-spring.xml
 
 
