--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <choerodon.serviceBuild>true</choerodon.serviceBuild>
         <choerodon.mainClass>io.choerodon.devops.DevopsServiceBusinessApplication</choerodon.mainClass>
         <spring.data.redis.version>2.1.0.RELEASE</spring.data.redis.version>
-        <devops.version>1.2.3-SNAPSHOT</devops.version>
+        <devops.version>1.2.3.RELEASE</devops.version>
         <devops.plugin.version>1.2.0.RELEASE</devops.plugin.version>
     </properties>
 
