--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <choerodon.serviceBuild>true</choerodon.serviceBuild>
         <choerodon.mainClass>io.choerodon.devops.DevopsServiceBusinessApplication</choerodon.mainClass>
         <spring.data.redis.version>2.1.0.RELEASE</spring.data.redis.version>
-        <devops.version>1.3.0-alpha.4-SNAPSHOT</devops.version>
+        <devops.version>1.3.0-alpha.4.RELEASE</devops.version>
         <devops.plugin.version>1.3.0-alpha.1.RELEASE</devops.plugin.version>
     </properties>
 
