--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
         <choerodon.serviceBuild>true</choerodon.serviceBuild>
         <choerodon.mainClass>io.choerodon.devops.DevopsServiceBusinessApplication</choerodon.mainClass>
         <spring.data.redis.version>2.1.0.RELEASE</spring.data.redis.version>
-        <devops.version>1.3.0.RELEASE</devops.version>
-        <devops.plugin.version>1.3.0.RELEASE</devops.plugin.version>
+        <devops.version>1.4.0-SNAPSHOT</devops.version>
+        <devops.plugin.version>1.4.0-SNAPSHOT</devops.plugin.version>
     </properties>
 
 
