--- a/chart/devops-service-business/values.yaml
+++ b/chart/devops-service-business/values.yaml
@@ -3,7 +3,7 @@ preJob:
   # job 超时时间
   timeout: 1200
   # 工具 jar 包镜像库地址
-  image: registry.cn-shanghai.aliyuncs.com/c7n/dbtool:0.7.2
+  image: registry.cn-shanghai.aliyuncs.com/c7n/dbtool:0.7.4
   # 初始化数据库定义
   preInitDB:
     # 是否初始化本服务数据库
@@ -14,6 +14,8 @@ preJob:
       username: username
       password: password
       driver: com.mysql.jdbc.Driver
+      #排除更新某些表或者字段 table1,table2.column1
+    exclusion:
     datasources:
       # 多数据源初始化
       platform:
