--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>devops-service-business</artifactId>
-    <version>1.3.3.RELEASE</version>
+    <version>1.3.4-SNAPSHOT</version>
 
     <!--加parent-->
     <parent>
@@ -16,7 +16,7 @@
         <choerodon.serviceBuild>true</choerodon.serviceBuild>
         <choerodon.mainClass>io.choerodon.devops.DevopsServiceBusinessApplication</choerodon.mainClass>
         <spring.data.redis.version>2.1.0.RELEASE</spring.data.redis.version>
-        <devops.version>1.3.4.RELEASE</devops.version>
+        <devops.version>1.3.5-SNAPSHOT</devops.version>
         <devops.plugin.version>1.3.1.RELEASE</devops.plugin.version>
     </properties>
 
