--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>devops-service-business</artifactId>
-    <version>2.0.3.RELEASE</version>
+    <version>2.0.4-SNAPSHOT</version>
     <url>https://github.com/open-hand/devops-service-business-business</url>
 
     <!--加parent-->
@@ -16,7 +16,7 @@
     <properties>
         <choerodon.serviceBuild>true</choerodon.serviceBuild>
         <choerodon.mainClass>io.choerodon.devops.DevopsServiceBusinessApplication</choerodon.mainClass>
-        <devops.version>2.0.3.RELEASE</devops.version>
+        <devops.version>2.0.4-SNAPSHOT</devops.version>
         <devops.plugin.version>2.0.1.RELEASE</devops.plugin.version>
     </properties>
 
