[IMP]调整探针周期,默认启用启动探针

--- a/chart/devops-service-business/templates/deployment.yaml
+++ b/chart/devops-service-business/templates/deployment.yaml
@@ -197,9 +197,8 @@ spec:
           {{- end }}
           {{- if .Values.startupProbe.enabled }}
           startupProbe:
-            httpGet:
-              path: /actuator/health
-              port: actuator
+            tcpSocket:
+              port: server
             initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.startupProbe.periodSeconds }}
             timeoutSeconds: {{ .Values.startupProbe.timeoutSeconds }}
