--- a/chart/devops-service-business/values.yaml
+++ b/chart/devops-service-business/values.yaml
@@ -368,7 +368,7 @@ livenessProbe:
   # -- Enable livenessProbe
   enabled: true
   # -- Initial delay seconds for livenessProbe
-  initialDelaySeconds: 480
+  initialDelaySeconds: 300
   # -- Period seconds for livenessProbe
   periodSeconds: 5
   # -- Timeout seconds for livenessProbe
@@ -376,12 +376,12 @@ livenessProbe:
   # -- Success threshold for livenessProbe
   successThreshold: 1
   # -- Failure threshold for livenessProbe
-  failureThreshold: 5
+  failureThreshold: 2
 readinessProbe:
   # -- Enable readinessProbe
   enabled: true
   # -- Initial delay seconds for readinessProbe
-  initialDelaySeconds: 30
+  initialDelaySeconds: 20
   # -- Period seconds for readinessProbe
   periodSeconds: 5
   # -- Timeout seconds for readinessProbe
@@ -389,16 +389,16 @@ readinessProbe:
   # -- Success threshold for readinessProbe
   successThreshold: 1
   # -- Failure threshold for readinessProbe
-  failureThreshold: 5
+  failureThreshold: 2
 startupProbe:
   # -- Enable startupProbe
-  enabled: false
+  enabled: true
   # -- Initial delay seconds for startupProbe
-  initialDelaySeconds: 0
+  initialDelaySeconds: 10
   # -- Period seconds for startupProbe
-  periodSeconds: 5
+  periodSeconds: 3
   # -- Timeout seconds for startupProbe
-  timeoutSeconds: 3
+  timeoutSeconds: 2
   # -- Success threshold for startupProbe
   successThreshold: 1
   # -- Failure threshold for startupProbe
